log/build_2026-04-24_21-13-34/flapping_foil_propulsors_control/stderr.log
  File "/home/shafa/flapping-propulsors-control/install/flapping_foil_propulsors_control/lib/python3.12/site-packages/flapping_foil_propulsors_control/crab.py", line 38
    """Captures frames and dynamically initializes the writer."""
       ^^^^^^^^
SyntaxError: invalid syntax

